fixed overflow and CORS error

--- a/main.css
+++ b/main.css
@@ -1,7 +1,7 @@
 html, body
 {
 	max-width: 100%;
-
+	overflow-x: hidden;
 	margin: 0px 0px 0px 0px;
 }
 
@@ -165,7 +165,7 @@ p
 
 	border-radius: 10px;
 	padding: 10px;
-	
+
 
 }
 
